--- a/ewooral_kingdom/src/index.css
+++ b/ewooral_kingdom/src/index.css
@@ -6,7 +6,7 @@
   --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
   --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
   
-  --color-bg: #2b0866;
+  --color-bg: #0f342e;
   --color-footer : #031B34;
   --color-blog: #042c54;
   --color-text: #9780fe;
