--- a/ewooral_kingdom/src/components/navbar/navbar.css
+++ b/ewooral_kingdom/src/components/navbar/navbar.css
@@ -1,15 +1,95 @@
-.ek__navbar{
+.ek__navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: .5rem 4rem;
-} 
-.ek__navbar-links{
-    flex: 1;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  padding: 0.5rem 4rem;
 }
-.ek__navbar-links_logo{
-    margin-right :2rem;
+.ek__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
+.ek__navbar-links_logo {
+  margin-right: 2rem;
+}
+.ek__navbar-links_container {
+  display: flex;
+  flex-direction: row;
+}
+.ek__navbar-sign {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.ek__navbar-links_container p,
+.ek__navbar-sign p,
+.ek__navbar-menu_container p {
+  color: #fff;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: capitalize;
+  margin: 0 1rem;
+  cursor: pointer;
+}
+.ek__navbar-sign button,
+.ek__navbar-menu_container button {
+  padding: 0.5rem 1rem;
+  color: #fff;
+  background: #ff4820;
+  font-family: var(--font-family);
+  line-height: 25px;
+  font-size: 18px;
+  border-radius: 25px;
+  border:none;
+  outline: none;
+  cursor: pointer;
+  box-shadow: transparent,
+              #fff;
+}
+.ek__navbar-menu{
+  margin-left:1rem;display:none; position:relative;
+}
+.ek__navbar-menu svg{
+  cursor:pointer;
+}
+.ek__navbar-menu_container{
+  display:flex;
+  justify-content: flex-end;
+  align-items:flex-end;
+  flex-direction: column;
+
+  text-align:end;
+  background: var(--color-footer);
+  padding:2rem;
+  position:absolute;
+  top:40px;
+  right:0;
+  margin-top: 1rem;
+  min-width: 210px;
+  border-radius: 5px;
+  box-shadow: 0 0 5 rgba(0,0,0,0.2);
+
+}
+.ek__navbar-menu_container p{
+  margin:1rem 0;
+}
+.ek__navbar-menu_container-links-sign{
+  display:none;
+}
+
+
+@media screen and (max-width:1050px){
+  .ek__navbar-links_container{
+    display:none;
+  }
+}
+
+
+
+
+
+
+
