navbar.css updated for the react admin page

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -90,7 +90,7 @@
 
 
 @media screen and (max-width:1050px){
-  /* .ek__navbar-links_container{ */
+  .ek__navbar-links_container{
     display:none;
   }
 
