--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -89,7 +89,7 @@
 }
 
 
-@media screen and (max-width:1050px){
+/* @media screen and (max-width:1050px){ */
   .ek__navbar-links_container{
     display:none;
   }
