navbar.css updated for the react admin page

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -84,7 +84,7 @@
 .ek__navbar-menu_container p{
   margin:1rem 0;
 }
-.ek__navbar-menu_container-links-sign{
+/* .ek__navbar-menu_container-links-sign{ */
   display:none;
 }
 
