--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -82,7 +82,7 @@
 
 }
 .ek__navbar-menu_container p{
-  /* margin:1rem 0; */
+  margin:1rem 0;
 }
 .ek__navbar-menu_container-links-sign{
   display:none;
