--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -81,7 +81,7 @@
   box-shadow: 0 0 5 rgba(0,0,0,0.2);
 
 }
-.ek__navbar-menu_container p{
+/* .ek__navbar-menu_container p{ */
   margin:1rem 0;
 }
 .ek__navbar-menu_container-links-sign{
