--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -75,7 +75,7 @@
   position:absolute;
   top:40px;
   right:0;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   min-width: 210px;
   border-radius: 5px;
   box-shadow: 0 0 5 rgba(0,0,0,0.2);
