--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -74,7 +74,7 @@
   padding:2rem;
   position:absolute;
   top:40px;
-  /* right:0; */
+  right:0;
   margin-top: 1rem;
   min-width: 210px;
   border-radius: 5px;
