--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -72,7 +72,7 @@
   text-align:end;
   background: var(--color-footer);
   padding:2rem;
-  /* position:absolute; */
+  position:absolute;
   top:40px;
   right:0;
   margin-top: 1rem;
