navbar.css updated for the react admin page

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -71,7 +71,7 @@
 
   text-align:end;
   background: var(--color-footer);
-  padding:2rem;
+  /* padding:2rem; */
   position:absolute;
   top:40px;
   right:0;
