--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -69,7 +69,7 @@
   align-items:flex-end;
   flex-direction: column;
 
-  text-align:end;
+  /* text-align:end; */
   background: var(--color-footer);
   padding:2rem;
   position:absolute;
